# csv_to_db

./: .env  README.md  build_exe.py  create_test_zip.py  csv_to_db.spec  main.py  processed_files.json  pyproject.toml  repomix-output.xml  sensor_data.duckdb  tauri_integration_example.rs
data/: Cond_data.csv  other_data.csv
data/subfolder/: User_data.csv
database/: sensor_data.duckdb
docs/: developer_guide.md  file_formats.md  installation.md  technical_reference.md  troubleshooting.md  user_manual.md
processed/: integrated_data.csv  integrated_data.parquet  processed_Cond_data.csv  processed_Cond_data.parquet  processed_User_data copy.csv  processed_User_data copy.parquet  processed_User_data.csv  processed_User_data.parquet
src/: __init__.py  config.py  db.py  file_finder.py  logger.py  main.py  preprocessor.py
